<resources>
    <string name="app_name">BookMatesProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BookMates</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_gamesplaying">Games</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="add_player">Add Player</string>
    <string name="add_layout">Add Template</string>
    <string name="add_game">Add Game</string>
    <string name="Leaderboard_title_start">Win Leaderboard</string>
    <string name="first_place">"1: "</string>
    <string name="second_place">"2: "</string>
    <string name="third_place">"3: "</string>
    <string name="game_title">Game</string>
    <string name="last_updated_text">Last Updated: dd-mm-yyyy</string>

    <string name="account">"Account"</string>
    <string name="camera">"Camera"</string>
    <string name="select_game">"Select Game"</string>
    <string name="new_game">"New Game"</string>
    <string name="select_game_text">"Select from an existing game:"</string>
    <string name="new_game_text">"Start a new game: "</string>
    <string name="developed">App developed by: Trent G, Ronin G, Stephen R, and Ellie W </string>

    <string name="menu_home">Home</string>
    <string name="menu_games">Games</string>
    <string name="menu_Leaderboard">Leaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in">Sign in or register</string>

    <!-- Account strings -->
    <string name="current_username">username: example</string>
    <string name="current_email">example@example.com</string>
    <string name="current_games_played">games played: 4</string>
    <string name="current_players">Players: playerName</string>

    <string name="current_user"></string>

</resources>