<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/gameListFragment"
            android:icon="@drawable/baseline_casino_24"
            android:title="@string/menu_games" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/leaderboard"
            android:title="@string/menu_Leaderboard" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/account" />
    </group>
</menu>